# comments-spa-backend

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  db_schema.mwb  entrypoint.sh  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: .env.example  Makefile  entrypoint.sh  pyproject.toml
backend/comments/: consumers.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  validators.py  views.py
backend/comments/migrations/: 0001_initial.py  0002_initial.py
backend/config/: asgi.py  routing.py  settings.py  urls.py
backend/users/: dto.py  models.py  serializers.py  views.py
backend/users/auth/: jwt.py
backend/users/migrations/: 0001_initial.py
comments/: apps.py  consumers.py  models.py  permissions.py  serializers.py  services.py  signals.py  tasks.py  urls.py  validators.py  views.py
comments/migrations/: 0001_initial.py  0002_initial.py  0003_comment_updated_at_alter_comment_homepage.py
config/: settings.py  urls.py
deploy/: Dockerfile  docker-compose.yaml
deploy/nginx/: nginx.conf.template
frontend/: Dockerfile  Makefile  index.html  package-lock.json  package.json
frontend/src/: main.js
frontend/src/api/: index.js
frontend/src/components/: AppHeader.vue  CommentForm.vue  CommentItem.vue  CommentList.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js  comments.js
frontend/src/views/: HomeView.vue  LoginView.vue  RegisterView.vue
users/: exceptions.py  models.py  urls.py
users/auth/: base.py  jwt.py
users/migrations/: 0001_initial.py
