[tool.poetry]
name = "comments-spa"
version = "0.1.0"
description = ""
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
python-decouple = "^3.8"
django = "^5.2"
django-redis = "^6.0.0"
djangorestframework = "^3.15"
django-cors-headers = "^4.9"
django-simple-captcha = "^0.6.3"
django-celery-results = "^2.6.0"
djangorestframework-simplejwt = "^5.5"
celery = "^5.6.2"
psycopg2 = "^2.9.11"
pillow = "^12.1"
bleach = "^6.3"
drf-spectacular = "^0.29.0"
lxml = "^6.0.2"
channels = "^4.3.2"
channels-redis = "^4.3.0"

[tool.poetry.group.server.dependencies]
gunicorn = "^21.0"
uvicorn = {version = "^0.29", extras = ["standard"]}

[tool.poetry.group.local.dependencies]
pytest-django = "^4.12"
ruff = "^0.15"
djangorestframework-stubs = "^3.16.8"
celery-types = "^0.26.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "DJ"]
